--- a/index.html
+++ b/index.html
@@ -1,56 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div id="bg">
-        <div class="intro">
-            <h1 id="name">Hi, I'm Suraj Mhaske</h1>
-            <h3 id="role">A Professional Web Developer</h3>
-        </div>
+      <div class="intro">
+        <h1 id="name">Hi, I'm Suraj Mhaske</h1>
+        <h3 id="role">A Professional Web Developer</h3>
+      </div>
 
-        <div class="mainContainer">
-            <div id="profile">
-                <img src="profile.png">
-            </div>
-            <div id="info">
-                <div class="icons">
-                    <div class="icon">
-                        <img class="i 1" src="profile.svg" alt="">
-                        <span class="t 1">About</span>
-                    </div>
-                    <div class="icon">
-                        <img class="i 2" src="work.svg" alt="">
-                        <span class="t 2">Work</span>
-                    </div>
-                    <div class="icon">
-                        <img class="i 3" src="github.svg" alt="">
-                        <span class="t 3">Github</span>
-                    </div>
-                    <div class="icon">
-                        <img class="i 4" src="leetcode.svg" alt="">
-                        <span class="t 4">LeetCode</span>
-                    </div>
-                    <div class="icon">
-                        <img class="i 5" src="connect-svgrepo-com.svg" alt="">
-                        <span class="t 5">Connect</span>
-                    </div>
-                </div>
-                <div id="display">
-
-                </div>
-            </div>
+      <div class="mainContainer">
+        <div id="profile">
+          <img src="profile.png" />
         </div>
+        <div id="info">
+          <div class="icons">
+            <button class="icon">
+              <img class="i 1" src="profile.svg" alt="" />
+              <span class="t 1">About</span>
+            </button>
+            <button class="icon">
+              <img class="i 2" src="work.svg" alt="" />
+              <span class="t 2">Work</span>
+            </button>
+            <button class="icon">
+              <img class="i 3" src="github.svg" alt="" />
+              <span class="t 3">Github</span>
+            </button>
+            <button class="icon">
+              <img class="i 4" src="leetcode.svg" alt="" />
+              <span class="t 4">LeetCode</span>
+            </button>
+            <button class="icon">
+              <img class="i 5" src="connect-svgrepo-com.svg" alt="" />
+              <span class="t 5">Connect</span>
+            </button>
+          </div>
+          <div id="display"></div>
+        </div>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
